syntax = "proto3";
package nescordRestClient;

service RestService {
  rpc call(RequestDto) returns (ResponseDto);
}

message RequestDto {
  string action = 1;
  QueryDto query = 2;
  string body = 3;
}

message ResponseDto {
  string data = 1;
}

message QueryDto {
  string guildId = 1;
  string memberId = 2;
  string channelId = 3;
  string messageId = 4;
  string roleId = 5;
}