// Original file: apps/rest/src/proto/nescord-rest.proto


export interface QueryDto {
  'guildId'?: (string);
  'memberId'?: (string);
  'channelId'?: (string);
  'messageId'?: (string);
  'roleId'?: (string);
}

export interface QueryDto__Output {
  'guildId'?: (string);
  'memberId'?: (string);
  'channelId'?: (string);
  'messageId'?: (string);
  'roleId'?: (string);
}
